fix(ElementWindow): Avoid cutting off content at the top
If we open a select in the elements window
and the popup opens to the top off the window,
we must not cut-off the content. For this to
work well, we need to move the top bar below the
main_content, because it is fied and would cut-off
the elements window.

--- a/app/stylesheets/alchemy/admin/archive.scss
+++ b/app/stylesheets/alchemy/admin/archive.scss
@@ -264,7 +264,6 @@ div#library_sidebar {
 
   padding: var(--spacing-2) var(--spacing-4) var(--spacing-2) var(--spacing-4);
   height: calc(100% - var(--top-menu-height) - var(--pagination-height));
-  z-index: 3;
   background-color: var(--sidebar-background-color);
 
   h2 {
