--- a/app/stylesheets/alchemy/admin/navigation.scss
+++ b/app/stylesheets/alchemy/admin/navigation.scss
@@ -7,7 +7,6 @@
   top: 0;
   margin-left: var(--main-menu-width);
   padding-right: var(--main-menu-width);
-  z-index: 20;
   width: 100%;
   height: var(--top-menu-height);
   @extend .disable-user-select;
